# Bot

./: .dockerignore  .env  Dockerfile  config.py  env.example  main.py  pyproject.toml
handlers/: categories.py  locations.py  other.py  photos.py  products.py
states/: categories.py  locations.py  products.py
