[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot for warehouse project"
authors = ["Vika"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.19"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
